<resources>
    <string name="app_name">ClassicalComposer</string>
    <string name="composer_name">Nama Composer</string>
    <string name="year">0000 - 0000</string>
    <string name="song">Lagu:</string>
    <string name="composer_sonata">Sonata</string>
    <string name="detail">Detail</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>