<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.cardview.widget.CardView
        android:id="@+id/cv_composer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        card_view:cardCornerRadius="20sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_composer_photo"
            android:layout_width="150dp"
            android:layout_height="220dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="4dp"
            android:scaleType="fitCenter"
            tools:src="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="4dp"
            android:layout_toEndOf="@+id/img_composer_photo">

            <TextView
                android:id="@+id/tv_composer_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/composer_name"
                android:textStyle="bold"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tv_composer_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/year"
                android:textStyle="bold"
                android:textSize="16sp"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp">
                <TableRow>
                    <TextView
                        android:id="@+id/tv_composer_song"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:text="@string/song"
                        android:maxLines="2"
                        android:textStyle="bold"
                        android:textSize="16sp"/>


                    <TextView
                        android:id="@+id/tv_composer_sonata"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:text="@string/composer_sonata"
                        android:maxLines="3"
                        android:textSize="16sp"/>
                </TableRow>
            </TableLayout>

            <TextView
                android:id="@+id/tv_composer_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="@string/detail"
                android:textSize="16sp"/>

        </LinearLayout>

    </RelativeLayout>

    </androidx.cardview.widget.CardView>



</LinearLayout>